{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 15,
  "lineage": "f1a3fa0a-215b-7255-a16b-cf9fb139f5f3",
  "resources": [
    {
      "module": "module.myec2.module.mylb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:246212294438:loadbalancer/tf-lb-rabbitMQ",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "internal-tf-lb-rabbitMQ-448975622.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:15672",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "tf-lb-rabbitMQ",
            "idle_timeout": 60,
            "internal": true,
            "listener": [
              {
                "instance_port": 15672,
                "instance_protocol": "TCP",
                "lb_port": 15672,
                "lb_protocol": "TCP"
              },
              {
                "instance_port": 5672,
                "instance_protocol": "TCP",
                "lb_port": 5672,
                "lb_protocol": "TCP"
              }
            ],
            "name": "tf-lb-rabbitMQ",
            "security_groups": [
              "sg-0f04efda9a90fd90f"
            ],
            "source_security_group": "246212294438/rabbitMQ",
            "source_security_group_id": "sg-0f04efda9a90fd90f",
            "subnets": [
              "subnet-0047b630629c6cafc",
              "subnet-0bbd1702c73b375c8"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0977400a1806e86a5",
            "owner_id": "246212294438",
            "vpc_id": "vpc-08856d97c9261c2d0"
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways.module.myroutes",
      "mode": "managed",
      "type": "aws_route",
      "name": "r_pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0977400a1806e86a5",
            "id": "r-rtb-0dbf4f5c942a13ba81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dbf4f5c942a13ba8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.rt_pub"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways.module.myroutes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dbf4f5c942a13ba8",
            "owner_id": "246212294438",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-08856d97c9261c2d0"
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet.module.mygateways.module.myroutes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b12e786d08a0bde6",
            "route_table_id": "rtb-0dbf4f5c942a13ba8",
            "subnet_id": "subnet-0047b630629c6cafc"
          },
          "depends_on": [
            "aws_route_table.rt_pub"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c54411e28d9df171",
            "route_table_id": "rtb-0dbf4f5c942a13ba8",
            "subnet_id": "subnet-0bbd1702c73b375c8"
          },
          "depends_on": [
            "aws_route_table.rt_pub"
          ]
        }
      ]
    },
    {
      "module": "module.myec2.module.mysg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:security-group/sg-0f04efda9a90fd90f",
            "description": "Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f04efda9a90fd90f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4369,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4369
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              }
            ],
            "name": "rabbitMQ",
            "name_prefix": null,
            "owner_id": "246212294438",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08856d97c9261c2d0"
          }
        }
      ]
    },
    {
      "module": "module.myvpc.module.mysubnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:subnet/subnet-0047b630629c6cafc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0047b630629c6cafc",
            "map_public_ip_on_launch": true,
            "owner_id": "246212294438",
            "vpc_id": "vpc-08856d97c9261c2d0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:subnet/subnet-0bbd1702c73b375c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0bbd1702c73b375c8",
            "map_public_ip_on_launch": true,
            "owner_id": "246212294438",
            "vpc_id": "vpc-08856d97c9261c2d0"
          }
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246212294438:vpc/vpc-08856d97c9261c2d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0946829aa500568d0",
            "default_route_table_id": "rtb-0f3310af42e9c4718",
            "default_security_group_id": "sg-0e1c20cc3037b9058",
            "dhcp_options_id": "dopt-61208c18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08856d97c9261c2d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f3310af42e9c4718",
            "owner_id": "246212294438"
          }
        }
      ]
    }
  ]
}